[tool.poetry]
name = "python-transformer-starter"
version = "0.1.0"
description = ""
authors = ["YadaYuki <yada.yuki@fuji.waseda.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.2"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
pytest = "^6.2.5"
nltk = "^3.6.4"
gensim = "^4.1.2"
torch = "^1.10.0"
transformers = "^4.12.5"
torchtext = "^0.11.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
types-requests = "^2.25.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
